# CurveaSaaS

./: README.md
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/math/: ExpressionParser.cpp  ExpressionParser.hpp  FunctionAnalyzer.cpp  FunctionAnalyzer.hpp
backend/src/router/: Router.cpp  Router.hpp
frontend/: package-lock.json  package.json  tsconfig.frontend.json  tsconfig.json
frontend/database/: curvea.db-shm  curvea.db-wal
frontend/public/: articulos.html  graficador.html  index.html  login.html  style.css
frontend/public/js/: articles.js  graph.js  index.js  login.js  nav.js  server.js
frontend/src/: articles.ts  graph.ts  index.ts  login.ts  nav.ts  server.ts
